# media-downloader

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.security/: authenticated_negative.py  repository_fuzz.py
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  usage.md
installation/: index.html
legacy_readme/: index.html
media_downloader/: __init__.py  __main__.py  agent.py  agent_server.py  kg_media.py  mcp.py  mcp_config.json  mcp_server.py  media_downloader.py  media_downloader_a2a.py  media_downloader_agent.py  media_downloader_agent.py.bak  media_downloader_mcp.py  security.py  tools.py  utils.py  version.py
media_downloader/agent/: IDENTITY.md  templates.py
media_downloader/agent_data/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
media_downloader/mcp/: __init__.py
media_downloader/ontology/: __init__.py  certification.json  media.ttl
media_downloader/ontology/fixtures/: records.json
media_downloader/ontology/mappings/: source.yaml
media_downloader/ontology/migrations/: manifest.json
media_downloader/ontology/shapes/: connector.shacl.ttl
media_downloader/prompts/: main_agent.json  media_librarian.json
media_downloader/skills/media-audio/: SKILL.md  WORKFLOW.md
media_downloader/skills/media-download/: SKILL.md  WORKFLOW.md
media_downloader/skills/media-downloader-collection/: SKILL.md
media_downloader/skills/media-downloader-collection/a2a_client/: SKILL.md
media_downloader/skills/media-downloader-operations/: SKILL.md
media_downloader/skills/media-downloader-operations/agents/: openai.yaml
media_downloader/skills/media-downloader-operations/references/: catalog.md
media_downloader/skills/media-starter/: SKILL.md
media_downloader/skills/modular-starter/: SKILL.md
overview/: index.html
scripts/: validate_a2a_agent.py
search/: search_index.json
tests/: conftest.py  test_concept_parity.py  test_coverage_booster.py  test_init_dynamics.py  test_kg_media.py  test_mcp.py  test_security_boundaries.py  test_startup.py
usage/: index.html
video_downloader/: __init__.py  video_downloader.py
