[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "media-downloader"
version = "4.0.0"
description = "Download audio/videos from the internet!\nHost an MCP Server for Agentic AI to download videos!"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.12, <3.15"
dependencies = [ "agent-utilities>=1.27.1,<2.0.0", "yt-dlp[default]>=2026.7.4",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",]
all = [ "agent-utilities[mcp,agent-runtime,logfire]>=1.27.1,<2.0.0",]
test = [
    "pytest-xdist>=3.8.0", "pytest>=9.1.1", "pytest-asyncio>=1.4.0", "pytest-cov>=7.1.0",]

[project.scripts]
media-downloader = "media_downloader.media_downloader:main"
media-downloader-mcp = "media_downloader.mcp_server:mcp_server"
media-downloader-agent = "media_downloader.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
media-downloader = "media_downloader.skills"

[project.entry-points."agent_utilities.ontology_providers"]
media-downloader = "media_downloader.ontology"

[project.entry-points."agent_utilities.prompt_providers"]
media-downloader = "media_downloader.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
media_downloader = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
